[0.4.5]

  * Added --catalog-overwrite and --catalog-ignore options.
  * Added --renderer option (pyrender and pyglet options).

[0.4.4]

  * Added initial support for building parts.
  * Added tables and patio umbrellas.
  * Added texture and texture atlas support.
  * Added textured traffic signs.
  * Introduced command line script form OSM build (accepts center coordinates).
  * Initial features wishlist resolved.
  * Added SVG and PNG export support for 2D.
  * Several improvements and fixes to exporters.
  * Added support for lights (exported as instances with marker) and ddd:static.
  * Added export tree to JSON support.
  * Primitive colliders (AABox) and colliders export.
  * Added export mesh/markers command line switches.
  * Improved water handling (an underwater terrain is now generated).

[0.4.3]

  * Fixed riverbanks.
  * Using PBF+osmconvert+osmtogeojson in 1 file (resolves larger areas: rivers).
  * Export catalog command line support, also export markers or not.
  * Added catalog support.
  * Added osmops for item placement.
  * Fixed bug in intersects() causing false negatives.
  * Improved walls and areas (inner areas removed, buildings removed from walls...).
  * Texts on both sides of bus stops.
  * Sport pitch lines (draft for football).

[0.4.2]

  * Introducing UV mapping (cubic).
  * OSM using catalog and instances for fountains, trees, lamps, traffic lights.
  * Added support for instances.
  * Introduced catalog system.
  * Introduced material libraries.
  * Added align helper and grid/axis helper.
  * Introducing refactors, object catalog, unified materials.
  * Added extrude_step (across geometries, with optional caps).

[0.4.1]

  * Added some basic objects: benches, lighthouses, bus stops.
  * Added more road lines (sides and lanes).
  * Added intersections calculation (draft).
  * Exporting OSM amenity and other texts as metadata.
  * Exporting materials as metadata.

  * Fixed road line UV coordinates (left-right crossing issue).
