@@ -125,6 +125,10 @@ def tree_default(height=3.5, r=0.40, fork_iters=2, fork_height_ratio=0.35):
 
     obj.name = "Tree Default"
 
+    objtrunk = obj.select(lambda o: o.mat == ddd.mats.bark).combine()
+    objleaves = obj.select(lambda o: o.mat == ddd.mats.treetop).combine()
+    obj = ddd.group3([objtrunk, objleaves], name="Tree Default")
+
     return obj
 
 def palm_leaf(length=3, fallfactor=1):
@@ -195,6 +199,11 @@ def tree_palm(height=14, r=0.30):
     obj = recursivetree(height=height, r=r, fork_iters=1, fork_angle=10.0, fork_height_ratio=1.0,
                         trunk_callback=trunk_callback, leaves_callback=leaves_callback)
     obj.name = "Tree Palm"
+
+    objtrunk = obj.select(lambda o: o.mat == ddd.mats.bark).combine()
+    objleaves = obj.select(lambda o: o.mat == ddd.mats.treetop).combine()
+    #objleaves.mesh.merge_vertices()
+    obj = ddd.group3([objtrunk, objleaves], name="Tree Palm")
 
     #obj.show()
     return obj
